# file-structure

./: Cargo.toml  README.md
.github/workflows/: gif.yml
example/: Structfile.yml  demo.tape
src/: cli.rs  errors.rs  main.rs
